examples/test/testpolicy16946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16946
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key34: value1
      key17: value13
      key41: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
          key27: value14
      podSelector:
        matchLabels:
          key30: value43
